# RS232-Communication

./: CMakeLists.txt  main.cpp
includes/: datatypes.h  definitions.h  functions.h
source/: CMakeLists.txt  functions.cpp
